--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Publish to Azure
+name: Deploy to Github Pages
 
 env:
   HUGO_ENV: production
@@ -6,7 +6,8 @@ env:
 on:
   push:
     branches:
-      - master
+      - main
+  pull_request:
 
 jobs:
   deploy:
@@ -14,19 +15,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          submodules: true
-          fetch-depth: 0
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.73.0'
+          hugo-version: 'latest'
+          extended: true
 
       - name: Build
         run: hugo --minify --environment=production
 
       - name: Deploy
-        run: hugo deploy --force --maxDeletes -1
-        env:
-          AZURE_STORAGE_ACCOUNT: ${{ secrets.AZURE_STORAGE_ACCOUNT }}
-          AZURE_STORAGE_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
