--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,5 @@
-baseURL = "https://www.commhill.org/"
+baseURL = "https://commhill.github.io"
+#baseURL = "https://www.commhill.org/"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "LoveIt"
